--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <hgroup>
             <h1>EverLookNeverSee</h1>
             <h2>Milad Sadeghi D.M</h2>
-            <h2>OSS Developer && Junior Computer Vision Engineer</h2>
+            <h2>OSS Developer && Computer Vision Engineer</h2>
           </hgroup>
         </header>
 
