--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div class="right-container">
         <header class="page-header">
           <hgroup>
-            <h1>EverLookNeverSee</h1>
-            <h2>Milad Sadeghi D.M</h2>
+            <h1>Milad Sadeghi DM</h1>
+            <h2>@EverLookNeverSee</h2>
             <h2>OSS Developer && Computer Vision Engineer</h2>
           </hgroup>
         </header>
