--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <hgroup>
             <h1>Milad Sadeghi DM</h1>
             <h2>@EverLookNeverSee</h2>
-            <h2>OSS Developer && Computer Vision Engineer</h2>
+            <h2>OSS Developer && Computer Vision RSE</h2>
           </hgroup>
         </header>
 
