--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
         <header class="page-header">
           <hgroup>
             <h1>Milad Sadeghi DM</h1>
-            <h2>@EverLookNeverSee</h2>
-            <h2>OSS Developer | Computer Vision Engineer @ AI-Bridge</h2>
+            <h2>AKA EverLookNeverSee</h2>
+            <h2>OSS Developer @ Scipy</h2>
+            <h2>Computer Vision Engineer @ AI-Bridge</h2>
           </hgroup>
         </header>
 
