--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <a class="linkedin" href="https://www.linkedin.com/in/elns/"
             ><i class="fa fa-linkedin fa-2x"></i
           ></a>
-          <a class="mail" href="mailto:milad@ai-bridge.de"
+          <a class="mail" href="mailto:EverLookNeverSee@ProtonMail.ch"
             ><i class="fa fa-envelope fa-2x"></i
           ></a>
         </article>
