--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
         <header class="page-header">
           <hgroup>
             <h1>Milad Sadeghi DM</h1>
-            <h2>AKA EverLookNeverSee</h2>
-            <h2>OSS Developer @ Scipy</h2>
-            <h2>Computer Vision Engineer @ AI-Bridge</h2>
+            <h2>aka EverLookNeverSee</h2>
+            <h2>Learning New Things ;)</h2>
           </hgroup>
         </header>
 
