Changing page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>EverLookNeverSee</title>
+    <title>Milad Sadeghi DM</title>
 
     <!--Meta Tags-->
     <meta name="title" content="EverLookNeverSee" />
