--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <a class="linkedin" href="https://www.linkedin.com/in/elns/"
             ><i class="fa fa-linkedin fa-2x"></i
           ></a>
-          <a class="mail" href="mailto:EverLookNeverSee@ProtonMail.ch"
+          <a class="mail" href="mailto:EverLookNeverSee@Proton.me"
             ><i class="fa fa-envelope fa-2x"></i
           ></a>
         </article>
