--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
 
       <div class="left-container">
         <article class="page-left-content">
-          <a class="blog" href="https://virgool.io/@ELNS"
-            ><i class="fa fa-pencil fa-2x"></i
+          <a class="leetcode" href="https://leetcode.com/elns/"
+          ><i class="fa fa-code fa-2x"></i
+          ></a>
+          <a class="virgool" href="https://virgool.io/@ELNS"
+            ><i class="fa fa-pencil-square-o fa-2x"></i
           ></a>
           <a class="medium" href="https://medium.com/@EverLookNeverSee"
             ><i class="fa fa-medium fa-2x"></i>
