Removing unnecessary links and fixing icon size

--- a/index.html
+++ b/index.html
@@ -71,25 +71,22 @@
       <div class="left-container">
         <article class="page-left-content">
           <a class="leetcode" href="https://leetcode.com/elns/"
-          ><i class="fa fa-code fa-2x"></i
+          ><i class="fa fa-file-code-o fa-3x"></i
           ></a>
-          <a class="virgool" href="https://virgool.io/@ELNS"
-            ><i class="fa fa-pencil-square-o fa-2x"></i
+          <a class="codepen" href="https://codepen.io/elns/"
+          ><i class="fa fa-codepen fa-3x"></i
           ></a>
-          <a class="medium" href="https://medium.com/@EverLookNeverSee"
-            ><i class="fa fa-medium fa-2x"></i>
-          </a>
           <a class="twitter" href="https://twitter.com/CallMeELNS"
-            ><i class="fa fa-twitter fa-2x"></i
+            ><i class="fa fa-twitter fa-3x"></i
           ></a>
           <a class="github" href="https://github.com/EverLookNeverSee"
-            ><i class="fa fa-github fa-2x"></i
+            ><i class="fa fa-github fa-3x"></i
           ></a>
           <a class="linkedin" href="https://www.linkedin.com/in/elns/"
-            ><i class="fa fa-linkedin fa-2x"></i
+            ><i class="fa fa-linkedin fa-3x"></i
           ></a>
           <a class="mail" href="mailto:Milad.Sadeghi.DM@OutLook.com"
-            ><i class="fa fa-envelope fa-2x"></i
+            ><i class="fa fa-envelope fa-3x"></i
           ></a>
         </article>
       </div>
