--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <hgroup>
             <h1>Milad Sadeghi DM</h1>
             <h2>aka EverLookNeverSee</h2>
-            <h2>Learning New Things ;)</h2>
+            <h2>FrontEnd Engineer</h2>
           </hgroup>
         </header>
 
@@ -92,7 +92,7 @@
       </div>
 
       <aside class="page-sidebar">
-        Powered By Github, &copy;
+        Powered By netlify, &copy;
         <script>
           CopyRightTime();
         </script>
